"""initial

Revision ID: 3618a6defc6d
Revises: 
Create Date: 2026-07-12 06:36:50.697677

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '3618a6defc6d'
down_revision = None
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('habitaciones',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('numero', sa.String(length=10), nullable=False),
    sa.Column('tipo', sa.Enum('simple', 'doble', 'suite', 'deluxe', name='tipohabitacion', native_enum=False), nullable=False),
    sa.Column('descripcion', sa.Text(), nullable=True),
    sa.Column('precio_noche', sa.Numeric(precision=10, scale=2), nullable=False),
    sa.Column('capacidad', sa.Integer(), nullable=False),
    sa.Column('piso', sa.Integer(), nullable=False),
    sa.Column('estado', sa.Enum('disponible', 'ocupada', 'mantenimiento', name='estadohabitacion', native_enum=False), nullable=False),
    sa.Column('activo', sa.Boolean(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('numero')
    )
    op.create_table('usuarios',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('nombre', sa.String(length=100), nullable=False),
    sa.Column('apellido', sa.String(length=100), nullable=False),
    sa.Column('email', sa.String(length=150), nullable=False),
    sa.Column('password_hash', sa.String(length=255), nullable=True),
    sa.Column('telefono', sa.String(length=20), nullable=True),
    sa.Column('rol', sa.Enum('admin', 'recepcionista', 'gerente', 'cliente', name='rolenum', native_enum=False), nullable=False),
    sa.Column('puntos_fidelizacion', sa.Integer(), nullable=False),
    sa.Column('activo', sa.Boolean(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('usuarios', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_usuarios_email'), ['email'], unique=True)

    op.create_table('huespedes',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('id_usuario', sa.Integer(), nullable=False),
    sa.Column('documento_id', sa.String(length=20), nullable=False),
    sa.Column('tipo_documento', sa.String(length=20), nullable=False),
    sa.Column('preferencias', sa.Text(), nullable=True),
    sa.Column('activo', sa.Boolean(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['id_usuario'], ['usuarios.id'], name='fk_huesped_usuario'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('id_usuario')
    )
    op.create_table('refresh_tokens',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('id_usuario', sa.Integer(), nullable=False),
    sa.Column('token_hash', sa.String(length=128), nullable=False),
    sa.Column('expires_at', sa.DateTime(), nullable=False),
    sa.Column('revoked', sa.Boolean(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['id_usuario'], ['usuarios.id'], name='fk_refresh_token_usuario'),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('refresh_tokens', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_refresh_tokens_token_hash'), ['token_hash'], unique=False)

    op.create_table('reportes_generados',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('tipo', sa.String(length=50), nullable=False),
    sa.Column('formato', sa.String(length=10), nullable=False),
    sa.Column('fecha_inicio', sa.Date(), nullable=False),
    sa.Column('fecha_fin', sa.Date(), nullable=False),
    sa.Column('archivo_path', sa.String(length=500), nullable=False),
    sa.Column('archivo_nombre', sa.String(length=255), nullable=False),
    sa.Column('creado_por', sa.Integer(), nullable=False),
    sa.Column('resumen', sa.JSON(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['creado_por'], ['usuarios.id'], name='fk_reporte_usuario'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('reservas',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('id_huesped', sa.Integer(), nullable=False),
    sa.Column('id_habitacion', sa.Integer(), nullable=False),
    sa.Column('fecha_reserva', sa.DateTime(), nullable=False),
    sa.Column('fecha_entrada', sa.Date(), nullable=False),
    sa.Column('fecha_salida', sa.Date(), nullable=False),
    sa.Column('noches', sa.Integer(), nullable=False),
    sa.Column('subtotal', sa.Numeric(precision=10, scale=2), nullable=False),
    sa.Column('impuestos', sa.Numeric(precision=10, scale=2), nullable=False),
    sa.Column('total', sa.Numeric(precision=10, scale=2), nullable=False),
    sa.Column('estado', sa.Enum('pendiente', 'confirmada', 'ocupada', 'completada', 'cancelada', name='estadoreserva', native_enum=False), nullable=False),
    sa.Column('expira_en', sa.DateTime(), nullable=True),
    sa.Column('motivo_cancelacion', sa.String(length=255), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['id_habitacion'], ['habitaciones.id'], name='fk_reserva_habitacion'),
    sa.ForeignKeyConstraint(['id_huesped'], ['huespedes.id'], name='fk_reserva_huesped'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('checkin_checkout',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('id_reserva', sa.Integer(), nullable=False),
    sa.Column('fecha_checkin', sa.DateTime(), nullable=True),
    sa.Column('fecha_checkout', sa.DateTime(), nullable=True),
    sa.Column('realizado_por', sa.Integer(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['id_reserva'], ['reservas.id'], name='fk_checkin_reserva'),
    sa.ForeignKeyConstraint(['realizado_por'], ['usuarios.id'], name='fk_checkin_usuario'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('id_reserva')
    )
    op.create_table('facturas',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('id_reserva', sa.Integer(), nullable=False),
    sa.Column('fecha_emision', sa.DateTime(), nullable=False),
    sa.Column('subtotal', sa.Numeric(precision=10, scale=2), nullable=False),
    sa.Column('impuestos', sa.Numeric(precision=10, scale=2), nullable=False),
    sa.Column('servicios_adicionales_total', sa.Numeric(precision=10, scale=2), nullable=False),
    sa.Column('total', sa.Numeric(precision=10, scale=2), nullable=False),
    sa.Column('estado', sa.Enum('pendiente', 'emitida', 'pagada', 'anulada', name='estadofactura', native_enum=False), nullable=False),
    sa.Column('pdf_path', sa.String(length=255), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['id_reserva'], ['reservas.id'], name='fk_factura_reserva'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('id_reserva')
    )
    op.create_table('notificaciones',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('activo', sa.Boolean(), nullable=False),
    sa.Column('id_reserva', sa.Integer(), nullable=False),
    sa.Column('tipo', sa.Enum('confirmacion_reserva', 'recordatorio', 'cancelacion', 'factura', name='tiponotificacion', native_enum=False), nullable=False),
    sa.Column('mensaje', sa.Text(), nullable=False),
    sa.Column('fecha_envio', sa.DateTime(), nullable=True),
    sa.Column('enviado', sa.Boolean(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['id_reserva'], ['reservas.id'], name='fk_notificacion_reserva'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('pagos',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('id_reserva', sa.Integer(), nullable=False),
    sa.Column('fecha', sa.DateTime(), nullable=False),
    sa.Column('monto', sa.Numeric(precision=10, scale=2), nullable=False),
    sa.Column('metodo', sa.Enum('tarjeta', 'efectivo', 'transferencia', name='metodopago', native_enum=False), nullable=False),
    sa.Column('tipo', sa.Enum('garantia', 'liquidacion', name='tipopago', native_enum=False), nullable=False),
    sa.Column('estado', sa.Enum('pendiente', 'aprobado', 'rechazado', 'reembolsado', 'anulado', name='estadopago', native_enum=False), nullable=False),
    sa.Column('referencia_externa', sa.String(length=100), nullable=True),
    sa.Column('stripe_payment_intent_id', sa.String(length=100), nullable=True),
    sa.Column('failure_message', sa.String(length=500), nullable=True),
    sa.Column('confirmado_por', sa.Integer(), nullable=True),
    sa.Column('fecha_confirmacion', sa.DateTime(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['confirmado_por'], ['usuarios.id'], name='fk_pago_confirmado_por'),
    sa.ForeignKeyConstraint(['id_reserva'], ['reservas.id'], name='fk_pago_reserva'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('puntos_fidelidad',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('id_huesped', sa.Integer(), nullable=False),
    sa.Column('id_reserva', sa.Integer(), nullable=True),
    sa.Column('puntos', sa.Integer(), nullable=False),
    sa.Column('fecha', sa.DateTime(), nullable=False),
    sa.Column('concepto', sa.String(length=200), nullable=False),
    sa.ForeignKeyConstraint(['id_huesped'], ['huespedes.id'], name='fk_puntos_huesped'),
    sa.ForeignKeyConstraint(['id_reserva'], ['reservas.id'], name='fk_puntos_reserva'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('servicios_adicionales',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('id_reserva', sa.Integer(), nullable=False),
    sa.Column('tipo', sa.Enum('comedor', 'spa', 'lavanderia', 'otro', name='tiposervicio', native_enum=False), nullable=False),
    sa.Column('recurso', sa.String(length=100), nullable=True),
    sa.Column('descripcion', sa.String(length=255), nullable=False),
    sa.Column('costo', sa.Numeric(precision=10, scale=2), nullable=False),
    sa.Column('fecha_hora', sa.DateTime(), nullable=False),
    sa.Column('duracion_minutos', sa.Integer(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['id_reserva'], ['reservas.id'], name='fk_servicio_reserva'),
    sa.PrimaryKeyConstraint('id')
    )
    op.create_table('reembolsos',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('id_pago', sa.Integer(), nullable=False),
    sa.Column('fecha', sa.DateTime(), nullable=False),
    sa.Column('monto', sa.Numeric(precision=10, scale=2), nullable=False),
    sa.Column('motivo', sa.String(length=255), nullable=False),
    sa.Column('estado', sa.Enum('solicitado', 'procesado', 'rechazado', name='estadoreembolso', native_enum=False), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=False),
    sa.Column('updated_at', sa.DateTime(), nullable=False),
    sa.ForeignKeyConstraint(['id_pago'], ['pagos.id'], name='fk_reembolso_pago'),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('id_pago')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('reembolsos')
    op.drop_table('servicios_adicionales')
    op.drop_table('puntos_fidelidad')
    op.drop_table('pagos')
    op.drop_table('notificaciones')
    op.drop_table('facturas')
    op.drop_table('checkin_checkout')
    op.drop_table('reservas')
    op.drop_table('reportes_generados')
    with op.batch_alter_table('refresh_tokens', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_refresh_tokens_token_hash'))

    op.drop_table('refresh_tokens')
    op.drop_table('huespedes')
    with op.batch_alter_table('usuarios', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_usuarios_email'))

    op.drop_table('usuarios')
    op.drop_table('habitaciones')
    # ### end Alembic commands ###
